[workspace]
resolver = "2"
members = ["crates/feed"]

[workspace.dependencies]
connector = { path = "crates/connector" }

anyhow = "1.0.95"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde_qs = "0.13"
chrono = "0.4"
csv = "1.3"
clap = { version = "3", features = ["derive"] }
